# serializer version: 1
# name: TestETableSnapshots.test_fixed_effects_html
  '''
  <div id="STABLE_ID" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
  <style>
  #STABLE_ID table {
            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
            -webkit-font-smoothing: antialiased;
            -moz-osx-font-smoothing: grayscale;
          }
  
  #STABLE_ID thead, tbody, tfoot, tr, td, th { border-style: none; }
   tr { background-color: transparent; }
  #STABLE_ID p { margin: 0; padding: 0; }
   #STABLE_ID .gt_table { display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: hidden; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; }
   #STABLE_ID .gt_caption { padding-top: 4px; padding-bottom: 4px; }
   #STABLE_ID .gt_title { color: #333333; font-size: 16px; font-weight: initial; padding-top: 6px; padding-bottom: 6px; padding-left: 5px; padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width: 0; }
   #STABLE_ID .gt_subtitle { color: #333333; font-size: 85%; font-weight: initial; padding-top: 5px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0; }
   #STABLE_ID .gt_heading { background-color: #FFFFFF; text-align: center; border-bottom-color: #FFFFFF; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_bottom_border { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #STABLE_ID .gt_col_headings { border-top-style: solid; border-top-width: 2px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_col_heading { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: bottom; padding-top: 2px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; overflow-x: hidden; }
   #STABLE_ID .gt_column_spanner_outer { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; padding-top: 0; padding-bottom: 0; padding-left: 4px; padding-right: 4px; }
   #STABLE_ID .gt_column_spanner_outer:first-child { padding-left: 0; }
   #STABLE_ID .gt_column_spanner_outer:last-child { padding-right: 0; }
   #STABLE_ID .gt_column_spanner { border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: bottom; padding-top: 2px; padding-bottom: 2px; overflow-x: hidden; display: inline-block; width: 100%; }
   #STABLE_ID .gt_spanner_row { border-bottom-style: hidden; }
   #STABLE_ID .gt_group_heading { padding-top: 0px; padding-bottom: 0px; padding-left: 5px; padding-right: 5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; text-transform: inherit; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: white; border-right-style: none; border-right-width: 1px; border-right-color: white; vertical-align: middle; text-align: left; }
   #STABLE_ID .gt_empty_group_heading { padding: 0.5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: middle; }
   #STABLE_ID .gt_from_md> :first-child { margin-top: 0; }
   #STABLE_ID .gt_from_md> :last-child { margin-bottom: 0; }
   #STABLE_ID .gt_row { padding-top: 2px; padding-bottom: 2px; padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style: none; border-top-width: 1px; border-top-color: #D3D3D3; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: middle; overflow-x: hidden; }
   #STABLE_ID .gt_stub { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: initial; text-transform: inherit; border-right-style: hidden; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; }
   #STABLE_ID .gt_stub_row_group { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top; }
   #STABLE_ID .gt_row_group_first td { border-top-width: 0.25px; }
   #STABLE_ID .gt_row_group_first th { border-top-width: 0.25px; }
   #STABLE_ID .gt_striped { background-color: rgba(128,128,128,0.05); }
   #STABLE_ID .gt_table_body { border-top-style: solid; border-top-width: 0px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; }
   #STABLE_ID .gt_sourcenotes { color: #333333; background-color: #FFFFFF; border-bottom-style: none; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_sourcenote { font-size: 10px; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; text-align: left; }
   #STABLE_ID .gt_left { text-align: left; }
   #STABLE_ID .gt_center { text-align: center; }
   #STABLE_ID .gt_right { text-align: right; font-variant-numeric: tabular-nums; }
   #STABLE_ID .gt_font_normal { font-weight: normal; }
   #STABLE_ID .gt_font_bold { font-weight: bold; }
   #STABLE_ID .gt_font_italic { font-style: italic; }
   #STABLE_ID .gt_super { font-size: 65%; }
   #STABLE_ID .gt_footnote_marks { font-size: 75%; vertical-align: 0.4em; position: initial; }
   #STABLE_ID .gt_asterisk { font-size: 100%; vertical-align: 0; }
   
  </style>
  <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
  <thead>
  
  <tr class="gt_col_headings gt_spanner_row">
    <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="2" colspan="1" scope="col" id=""></th>
    <th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="1" scope="col" id="y">
      <span class="gt_column_spanner">y</span>
    </th>
  </tr>
  <tr class="gt_col_headings">
    <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="0">(1)</th>
  </tr>
  </thead>
  <tbody class="gt_table_body">
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">coef</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">x</th>
      <td class="gt_row gt_center">2.100*** <br> (0.000)</td>
    </tr>
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">fe</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">group</th>
      <td class="gt_row gt_center">x</td>
    </tr>
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">stats</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">Observations</th>
      <td class="gt_row gt_center">100</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">R<sup>2</sup></th>
      <td class="gt_row gt_center">1</td>
    </tr>
  </tbody>
    <tfoot class="gt_sourcenotes">
    
    <tr>
      <td class="gt_sourcenote" colspan="2">Significance levels: * p &lt; 0.1, ** p &lt; 0.05, *** p &lt; 0.01. Format of coefficient cell: Coefficient   (Std. Error)</td>
    </tr>
  
  </tfoot>
  
  </table>
  
  </div>
          
  '''
# ---
# name: TestETableSnapshots.test_fixed_effects_latex
  '''
  \renewcommand\cellalign{t}
  \begin{threeparttable}
  \begingroup
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}X>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{1}{c}{y} \\
  \cmidrule(lr){2-2}
   & (1) \\
  \midrule
  \addlinespace[1ex]
  x & \makecell{2.100*** \\ (0.000)} \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  group & x \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  Observations & 100 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  $R^2$ & 1 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \footnotesize 
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)\end{minipage}
  
  \end{threeparttable}
  '''
# ---
# name: TestETableSnapshots.test_multi_model_html
  '''
  <div id="STABLE_ID" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
  <style>
  #STABLE_ID table {
            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
            -webkit-font-smoothing: antialiased;
            -moz-osx-font-smoothing: grayscale;
          }
  
  #STABLE_ID thead, tbody, tfoot, tr, td, th { border-style: none; }
   tr { background-color: transparent; }
  #STABLE_ID p { margin: 0; padding: 0; }
   #STABLE_ID .gt_table { display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: hidden; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; }
   #STABLE_ID .gt_caption { padding-top: 4px; padding-bottom: 4px; }
   #STABLE_ID .gt_title { color: #333333; font-size: 16px; font-weight: initial; padding-top: 6px; padding-bottom: 6px; padding-left: 5px; padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width: 0; }
   #STABLE_ID .gt_subtitle { color: #333333; font-size: 85%; font-weight: initial; padding-top: 5px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0; }
   #STABLE_ID .gt_heading { background-color: #FFFFFF; text-align: center; border-bottom-color: #FFFFFF; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_bottom_border { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #STABLE_ID .gt_col_headings { border-top-style: solid; border-top-width: 2px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_col_heading { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: bottom; padding-top: 2px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; overflow-x: hidden; }
   #STABLE_ID .gt_column_spanner_outer { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; padding-top: 0; padding-bottom: 0; padding-left: 4px; padding-right: 4px; }
   #STABLE_ID .gt_column_spanner_outer:first-child { padding-left: 0; }
   #STABLE_ID .gt_column_spanner_outer:last-child { padding-right: 0; }
   #STABLE_ID .gt_column_spanner { border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: bottom; padding-top: 2px; padding-bottom: 2px; overflow-x: hidden; display: inline-block; width: 100%; }
   #STABLE_ID .gt_spanner_row { border-bottom-style: hidden; }
   #STABLE_ID .gt_group_heading { padding-top: 0px; padding-bottom: 0px; padding-left: 5px; padding-right: 5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; text-transform: inherit; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: white; border-right-style: none; border-right-width: 1px; border-right-color: white; vertical-align: middle; text-align: left; }
   #STABLE_ID .gt_empty_group_heading { padding: 0.5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: middle; }
   #STABLE_ID .gt_from_md> :first-child { margin-top: 0; }
   #STABLE_ID .gt_from_md> :last-child { margin-bottom: 0; }
   #STABLE_ID .gt_row { padding-top: 2px; padding-bottom: 2px; padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style: none; border-top-width: 1px; border-top-color: #D3D3D3; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: middle; overflow-x: hidden; }
   #STABLE_ID .gt_stub { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: initial; text-transform: inherit; border-right-style: hidden; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; }
   #STABLE_ID .gt_stub_row_group { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top; }
   #STABLE_ID .gt_row_group_first td { border-top-width: 0.25px; }
   #STABLE_ID .gt_row_group_first th { border-top-width: 0.25px; }
   #STABLE_ID .gt_striped { background-color: rgba(128,128,128,0.05); }
   #STABLE_ID .gt_table_body { border-top-style: solid; border-top-width: 0px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; }
   #STABLE_ID .gt_sourcenotes { color: #333333; background-color: #FFFFFF; border-bottom-style: none; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_sourcenote { font-size: 10px; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; text-align: left; }
   #STABLE_ID .gt_left { text-align: left; }
   #STABLE_ID .gt_center { text-align: center; }
   #STABLE_ID .gt_right { text-align: right; font-variant-numeric: tabular-nums; }
   #STABLE_ID .gt_font_normal { font-weight: normal; }
   #STABLE_ID .gt_font_bold { font-weight: bold; }
   #STABLE_ID .gt_font_italic { font-style: italic; }
   #STABLE_ID .gt_super { font-size: 65%; }
   #STABLE_ID .gt_footnote_marks { font-size: 75%; vertical-align: 0.4em; position: initial; }
   #STABLE_ID .gt_asterisk { font-size: 100%; vertical-align: 0; }
   
  </style>
  <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
  <thead>
  
  <tr class="gt_col_headings gt_spanner_row">
    <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="2" colspan="1" scope="col" id=""></th>
    <th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="2" scope="colgroup" id="y">
      <span class="gt_column_spanner">y</span>
    </th>
  </tr>
  <tr class="gt_col_headings">
    <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="0">(1)</th>
    <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="1">(2)</th>
  </tr>
  </thead>
  <tbody class="gt_table_body">
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="3">coef</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">x</th>
      <td class="gt_row gt_center">2.100*** <br> (0.000)</td>
      <td class="gt_row gt_center">2.100*** <br> (0.000)</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">group=B</th>
      <td class="gt_row gt_center"></td>
      <td class="gt_row gt_center">-0.000 <br> (0.000)</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">Intercept</th>
      <td class="gt_row gt_center">0.000 <br> (0.000)</td>
      <td class="gt_row gt_center">0.000 <br> (0.000)</td>
    </tr>
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="3">stats</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">Observations</th>
      <td class="gt_row gt_center">100</td>
      <td class="gt_row gt_center">100</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">R<sup>2</sup></th>
      <td class="gt_row gt_center">1</td>
      <td class="gt_row gt_center">1</td>
    </tr>
  </tbody>
    <tfoot class="gt_sourcenotes">
    
    <tr>
      <td class="gt_sourcenote" colspan="3">Significance levels: * p &lt; 0.1, ** p &lt; 0.05, *** p &lt; 0.01. Format of coefficient cell: Coefficient   (Std. Error)</td>
    </tr>
  
  </tfoot>
  
  </table>
  
  </div>
          
  '''
# ---
# name: TestETableSnapshots.test_multi_model_latex
  '''
  \renewcommand\cellalign{t}
  \begin{threeparttable}
  \begingroup
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{2}{c}{y} \\
  \cmidrule(lr){2-3}
   & (1) & (2) \\
  \midrule
  \addlinespace[1ex]
  x & \makecell{2.100*** \\ (0.000)} & \makecell{2.100*** \\ (0.000)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  group=B &  & \makecell{-0.000 \\ (0.000)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  Intercept & \makecell{0.000 \\ (0.000)} & \makecell{0.000 \\ (0.000)} \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  Observations & 100 & 100 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  $R^2$ & 1 & 1 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \footnotesize 
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)\end{minipage}
  
  \end{threeparttable}
  '''
# ---
# name: TestETableSnapshots.test_single_model_html
  '''
  <div id="STABLE_ID" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
  <style>
  #STABLE_ID table {
            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
            -webkit-font-smoothing: antialiased;
            -moz-osx-font-smoothing: grayscale;
          }
  
  #STABLE_ID thead, tbody, tfoot, tr, td, th { border-style: none; }
   tr { background-color: transparent; }
  #STABLE_ID p { margin: 0; padding: 0; }
   #STABLE_ID .gt_table { display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: hidden; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; }
   #STABLE_ID .gt_caption { padding-top: 4px; padding-bottom: 4px; }
   #STABLE_ID .gt_title { color: #333333; font-size: 16px; font-weight: initial; padding-top: 6px; padding-bottom: 6px; padding-left: 5px; padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width: 0; }
   #STABLE_ID .gt_subtitle { color: #333333; font-size: 85%; font-weight: initial; padding-top: 5px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0; }
   #STABLE_ID .gt_heading { background-color: #FFFFFF; text-align: center; border-bottom-color: #FFFFFF; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_bottom_border { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #STABLE_ID .gt_col_headings { border-top-style: solid; border-top-width: 2px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_col_heading { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: bottom; padding-top: 2px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; overflow-x: hidden; }
   #STABLE_ID .gt_column_spanner_outer { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; padding-top: 0; padding-bottom: 0; padding-left: 4px; padding-right: 4px; }
   #STABLE_ID .gt_column_spanner_outer:first-child { padding-left: 0; }
   #STABLE_ID .gt_column_spanner_outer:last-child { padding-right: 0; }
   #STABLE_ID .gt_column_spanner { border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: bottom; padding-top: 2px; padding-bottom: 2px; overflow-x: hidden; display: inline-block; width: 100%; }
   #STABLE_ID .gt_spanner_row { border-bottom-style: hidden; }
   #STABLE_ID .gt_group_heading { padding-top: 0px; padding-bottom: 0px; padding-left: 5px; padding-right: 5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; text-transform: inherit; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: white; border-right-style: none; border-right-width: 1px; border-right-color: white; vertical-align: middle; text-align: left; }
   #STABLE_ID .gt_empty_group_heading { padding: 0.5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: middle; }
   #STABLE_ID .gt_from_md> :first-child { margin-top: 0; }
   #STABLE_ID .gt_from_md> :last-child { margin-bottom: 0; }
   #STABLE_ID .gt_row { padding-top: 2px; padding-bottom: 2px; padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style: none; border-top-width: 1px; border-top-color: #D3D3D3; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: middle; overflow-x: hidden; }
   #STABLE_ID .gt_stub { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: initial; text-transform: inherit; border-right-style: hidden; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; }
   #STABLE_ID .gt_stub_row_group { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top; }
   #STABLE_ID .gt_row_group_first td { border-top-width: 0.25px; }
   #STABLE_ID .gt_row_group_first th { border-top-width: 0.25px; }
   #STABLE_ID .gt_striped { background-color: rgba(128,128,128,0.05); }
   #STABLE_ID .gt_table_body { border-top-style: solid; border-top-width: 0px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; }
   #STABLE_ID .gt_sourcenotes { color: #333333; background-color: #FFFFFF; border-bottom-style: none; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_sourcenote { font-size: 10px; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; text-align: left; }
   #STABLE_ID .gt_left { text-align: left; }
   #STABLE_ID .gt_center { text-align: center; }
   #STABLE_ID .gt_right { text-align: right; font-variant-numeric: tabular-nums; }
   #STABLE_ID .gt_font_normal { font-weight: normal; }
   #STABLE_ID .gt_font_bold { font-weight: bold; }
   #STABLE_ID .gt_font_italic { font-style: italic; }
   #STABLE_ID .gt_super { font-size: 65%; }
   #STABLE_ID .gt_footnote_marks { font-size: 75%; vertical-align: 0.4em; position: initial; }
   #STABLE_ID .gt_asterisk { font-size: 100%; vertical-align: 0; }
   
  </style>
  <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
  <thead>
  
  <tr class="gt_col_headings gt_spanner_row">
    <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="2" colspan="1" scope="col" id=""></th>
    <th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="1" scope="col" id="y">
      <span class="gt_column_spanner">y</span>
    </th>
  </tr>
  <tr class="gt_col_headings">
    <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="0">(1)</th>
  </tr>
  </thead>
  <tbody class="gt_table_body">
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">coef</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">x</th>
      <td class="gt_row gt_center">2.100*** <br> (0.000)</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">Intercept</th>
      <td class="gt_row gt_center">0.000 <br> (0.000)</td>
    </tr>
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">stats</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">Observations</th>
      <td class="gt_row gt_center">100</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">R<sup>2</sup></th>
      <td class="gt_row gt_center">1</td>
    </tr>
  </tbody>
    <tfoot class="gt_sourcenotes">
    
    <tr>
      <td class="gt_sourcenote" colspan="2">Significance levels: * p &lt; 0.1, ** p &lt; 0.05, *** p &lt; 0.01. Format of coefficient cell: Coefficient   (Std. Error)</td>
    </tr>
  
  </tfoot>
  
  </table>
  
  </div>
          
  '''
# ---
# name: TestETableSnapshots.test_single_model_latex
  '''
  \renewcommand\cellalign{t}
  \begin{threeparttable}
  \begingroup
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}X>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{1}{c}{y} \\
  \cmidrule(lr){2-2}
   & (1) \\
  \midrule
  \addlinespace[1ex]
  x & \makecell{2.100*** \\ (0.000)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  Intercept & \makecell{0.000 \\ (0.000)} \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  Observations & 100 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  $R^2$ & 1 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \footnotesize 
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)\end{minipage}
  
  \end{threeparttable}
  '''
# ---
# name: TestLinearmodelsSnapshots.test_absorbingls_html
  '''
  <div id="STABLE_ID" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
  <style>
  #STABLE_ID table {
            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
            -webkit-font-smoothing: antialiased;
            -moz-osx-font-smoothing: grayscale;
          }
  
  #STABLE_ID thead, tbody, tfoot, tr, td, th { border-style: none; }
   tr { background-color: transparent; }
  #STABLE_ID p { margin: 0; padding: 0; }
   #STABLE_ID .gt_table { display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: hidden; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; }
   #STABLE_ID .gt_caption { padding-top: 4px; padding-bottom: 4px; }
   #STABLE_ID .gt_title { color: #333333; font-size: 16px; font-weight: initial; padding-top: 6px; padding-bottom: 6px; padding-left: 5px; padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width: 0; }
   #STABLE_ID .gt_subtitle { color: #333333; font-size: 85%; font-weight: initial; padding-top: 5px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0; }
   #STABLE_ID .gt_heading { background-color: #FFFFFF; text-align: center; border-bottom-color: #FFFFFF; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_bottom_border { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #STABLE_ID .gt_col_headings { border-top-style: solid; border-top-width: 2px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_col_heading { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: bottom; padding-top: 2px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; overflow-x: hidden; }
   #STABLE_ID .gt_column_spanner_outer { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; padding-top: 0; padding-bottom: 0; padding-left: 4px; padding-right: 4px; }
   #STABLE_ID .gt_column_spanner_outer:first-child { padding-left: 0; }
   #STABLE_ID .gt_column_spanner_outer:last-child { padding-right: 0; }
   #STABLE_ID .gt_column_spanner { border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: bottom; padding-top: 2px; padding-bottom: 2px; overflow-x: hidden; display: inline-block; width: 100%; }
   #STABLE_ID .gt_spanner_row { border-bottom-style: hidden; }
   #STABLE_ID .gt_group_heading { padding-top: 0px; padding-bottom: 0px; padding-left: 5px; padding-right: 5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; text-transform: inherit; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: white; border-right-style: none; border-right-width: 1px; border-right-color: white; vertical-align: middle; text-align: left; }
   #STABLE_ID .gt_empty_group_heading { padding: 0.5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: middle; }
   #STABLE_ID .gt_from_md> :first-child { margin-top: 0; }
   #STABLE_ID .gt_from_md> :last-child { margin-bottom: 0; }
   #STABLE_ID .gt_row { padding-top: 2px; padding-bottom: 2px; padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style: none; border-top-width: 1px; border-top-color: #D3D3D3; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: middle; overflow-x: hidden; }
   #STABLE_ID .gt_stub { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: initial; text-transform: inherit; border-right-style: hidden; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; }
   #STABLE_ID .gt_stub_row_group { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top; }
   #STABLE_ID .gt_row_group_first td { border-top-width: 0.25px; }
   #STABLE_ID .gt_row_group_first th { border-top-width: 0.25px; }
   #STABLE_ID .gt_striped { background-color: rgba(128,128,128,0.05); }
   #STABLE_ID .gt_table_body { border-top-style: solid; border-top-width: 0px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; }
   #STABLE_ID .gt_sourcenotes { color: #333333; background-color: #FFFFFF; border-bottom-style: none; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_sourcenote { font-size: 10px; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; text-align: left; }
   #STABLE_ID .gt_left { text-align: left; }
   #STABLE_ID .gt_center { text-align: center; }
   #STABLE_ID .gt_right { text-align: right; font-variant-numeric: tabular-nums; }
   #STABLE_ID .gt_font_normal { font-weight: normal; }
   #STABLE_ID .gt_font_bold { font-weight: bold; }
   #STABLE_ID .gt_font_italic { font-style: italic; }
   #STABLE_ID .gt_super { font-size: 65%; }
   #STABLE_ID .gt_footnote_marks { font-size: 75%; vertical-align: 0.4em; position: initial; }
   #STABLE_ID .gt_asterisk { font-size: 100%; vertical-align: 0; }
   
  </style>
  <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
  <thead>
  
  <tr class="gt_col_headings gt_spanner_row">
    <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="2" colspan="1" scope="col" id=""></th>
    <th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="1" scope="col" id="y">
      <span class="gt_column_spanner">y</span>
    </th>
  </tr>
  <tr class="gt_col_headings">
    <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="0">(1)</th>
  </tr>
  </thead>
  <tbody class="gt_table_body">
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">coef</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">x1</th>
      <td class="gt_row gt_center">2.004*** <br> (0.068)</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">x2</th>
      <td class="gt_row gt_center">0.570*** <br> (0.069)</td>
    </tr>
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">fe</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">firm_id</th>
      <td class="gt_row gt_center">x</td>
    </tr>
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">stats</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">Observations</th>
      <td class="gt_row gt_center">200</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">R<sup>2</sup></th>
      <td class="gt_row gt_center">0.813</td>
    </tr>
  </tbody>
    <tfoot class="gt_sourcenotes">
    
    <tr>
      <td class="gt_sourcenote" colspan="2">Significance levels: * p &lt; 0.1, ** p &lt; 0.05, *** p &lt; 0.01. Format of coefficient cell: Coefficient   (Std. Error)</td>
    </tr>
  
  </tfoot>
  
  </table>
  
  </div>
          
  '''
# ---
# name: TestLinearmodelsSnapshots.test_absorbingls_latex
  '''
  \renewcommand\cellalign{t}
  \begin{threeparttable}
  \begingroup
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}X>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{1}{c}{y} \\
  \cmidrule(lr){2-2}
   & (1) \\
  \midrule
  \addlinespace[1ex]
  x1 & \makecell{2.004*** \\ (0.068)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  x2 & \makecell{0.570*** \\ (0.069)} \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  firm_id & x \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  Observations & 200 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  $R^2$ & 0.813 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \footnotesize 
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)\end{minipage}
  
  \end{threeparttable}
  '''
# ---
# name: TestLinearmodelsSnapshots.test_iv2sls_html
  '''
  <div id="STABLE_ID" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
  <style>
  #STABLE_ID table {
            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
            -webkit-font-smoothing: antialiased;
            -moz-osx-font-smoothing: grayscale;
          }
  
  #STABLE_ID thead, tbody, tfoot, tr, td, th { border-style: none; }
   tr { background-color: transparent; }
  #STABLE_ID p { margin: 0; padding: 0; }
   #STABLE_ID .gt_table { display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: hidden; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; }
   #STABLE_ID .gt_caption { padding-top: 4px; padding-bottom: 4px; }
   #STABLE_ID .gt_title { color: #333333; font-size: 16px; font-weight: initial; padding-top: 6px; padding-bottom: 6px; padding-left: 5px; padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width: 0; }
   #STABLE_ID .gt_subtitle { color: #333333; font-size: 85%; font-weight: initial; padding-top: 5px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0; }
   #STABLE_ID .gt_heading { background-color: #FFFFFF; text-align: center; border-bottom-color: #FFFFFF; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_bottom_border { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #STABLE_ID .gt_col_headings { border-top-style: solid; border-top-width: 2px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_col_heading { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: bottom; padding-top: 2px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; overflow-x: hidden; }
   #STABLE_ID .gt_column_spanner_outer { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; padding-top: 0; padding-bottom: 0; padding-left: 4px; padding-right: 4px; }
   #STABLE_ID .gt_column_spanner_outer:first-child { padding-left: 0; }
   #STABLE_ID .gt_column_spanner_outer:last-child { padding-right: 0; }
   #STABLE_ID .gt_column_spanner { border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: bottom; padding-top: 2px; padding-bottom: 2px; overflow-x: hidden; display: inline-block; width: 100%; }
   #STABLE_ID .gt_spanner_row { border-bottom-style: hidden; }
   #STABLE_ID .gt_group_heading { padding-top: 0px; padding-bottom: 0px; padding-left: 5px; padding-right: 5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; text-transform: inherit; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: white; border-right-style: none; border-right-width: 1px; border-right-color: white; vertical-align: middle; text-align: left; }
   #STABLE_ID .gt_empty_group_heading { padding: 0.5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: middle; }
   #STABLE_ID .gt_from_md> :first-child { margin-top: 0; }
   #STABLE_ID .gt_from_md> :last-child { margin-bottom: 0; }
   #STABLE_ID .gt_row { padding-top: 2px; padding-bottom: 2px; padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style: none; border-top-width: 1px; border-top-color: #D3D3D3; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: middle; overflow-x: hidden; }
   #STABLE_ID .gt_stub { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: initial; text-transform: inherit; border-right-style: hidden; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; }
   #STABLE_ID .gt_stub_row_group { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top; }
   #STABLE_ID .gt_row_group_first td { border-top-width: 0.25px; }
   #STABLE_ID .gt_row_group_first th { border-top-width: 0.25px; }
   #STABLE_ID .gt_striped { background-color: rgba(128,128,128,0.05); }
   #STABLE_ID .gt_table_body { border-top-style: solid; border-top-width: 0px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; }
   #STABLE_ID .gt_sourcenotes { color: #333333; background-color: #FFFFFF; border-bottom-style: none; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_sourcenote { font-size: 10px; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; text-align: left; }
   #STABLE_ID .gt_left { text-align: left; }
   #STABLE_ID .gt_center { text-align: center; }
   #STABLE_ID .gt_right { text-align: right; font-variant-numeric: tabular-nums; }
   #STABLE_ID .gt_font_normal { font-weight: normal; }
   #STABLE_ID .gt_font_bold { font-weight: bold; }
   #STABLE_ID .gt_font_italic { font-style: italic; }
   #STABLE_ID .gt_super { font-size: 65%; }
   #STABLE_ID .gt_footnote_marks { font-size: 75%; vertical-align: 0.4em; position: initial; }
   #STABLE_ID .gt_asterisk { font-size: 100%; vertical-align: 0; }
   
  </style>
  <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
  <thead>
  
  <tr class="gt_col_headings gt_spanner_row">
    <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="2" colspan="1" scope="col" id=""></th>
    <th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="1" scope="col" id="y">
      <span class="gt_column_spanner">y</span>
    </th>
  </tr>
  <tr class="gt_col_headings">
    <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="0">(1)</th>
  </tr>
  </thead>
  <tbody class="gt_table_body">
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">coef</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">x_exog</th>
      <td class="gt_row gt_center">0.512*** <br> (0.006)</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">x_endog</th>
      <td class="gt_row gt_center">2.016*** <br> (0.014)</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">Intercept</th>
      <td class="gt_row gt_center">0.002 <br> (0.007)</td>
    </tr>
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">stats</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">Observations</th>
      <td class="gt_row gt_center">200</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">R<sup>2</sup></th>
      <td class="gt_row gt_center">0.995</td>
    </tr>
  </tbody>
    <tfoot class="gt_sourcenotes">
    
    <tr>
      <td class="gt_sourcenote" colspan="2">Significance levels: * p &lt; 0.1, ** p &lt; 0.05, *** p &lt; 0.01. Format of coefficient cell: Coefficient   (Std. Error)</td>
    </tr>
  
  </tfoot>
  
  </table>
  
  </div>
          
  '''
# ---
# name: TestLinearmodelsSnapshots.test_iv2sls_latex
  '''
  \renewcommand\cellalign{t}
  \begin{threeparttable}
  \begingroup
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}X>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{1}{c}{y} \\
  \cmidrule(lr){2-2}
   & (1) \\
  \midrule
  \addlinespace[1ex]
  x_exog & \makecell{0.512*** \\ (0.006)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  x_endog & \makecell{2.016*** \\ (0.014)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  Intercept & \makecell{0.002 \\ (0.007)} \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  Observations & 200 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  $R^2$ & 0.995 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \footnotesize 
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)\end{minipage}
  
  \end{threeparttable}
  '''
# ---
# name: TestLinearmodelsSnapshots.test_panelols_html
  '''
  <div id="STABLE_ID" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
  <style>
  #STABLE_ID table {
            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
            -webkit-font-smoothing: antialiased;
            -moz-osx-font-smoothing: grayscale;
          }
  
  #STABLE_ID thead, tbody, tfoot, tr, td, th { border-style: none; }
   tr { background-color: transparent; }
  #STABLE_ID p { margin: 0; padding: 0; }
   #STABLE_ID .gt_table { display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: hidden; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; }
   #STABLE_ID .gt_caption { padding-top: 4px; padding-bottom: 4px; }
   #STABLE_ID .gt_title { color: #333333; font-size: 16px; font-weight: initial; padding-top: 6px; padding-bottom: 6px; padding-left: 5px; padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width: 0; }
   #STABLE_ID .gt_subtitle { color: #333333; font-size: 85%; font-weight: initial; padding-top: 5px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0; }
   #STABLE_ID .gt_heading { background-color: #FFFFFF; text-align: center; border-bottom-color: #FFFFFF; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_bottom_border { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #STABLE_ID .gt_col_headings { border-top-style: solid; border-top-width: 2px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_col_heading { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: bottom; padding-top: 2px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; overflow-x: hidden; }
   #STABLE_ID .gt_column_spanner_outer { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; padding-top: 0; padding-bottom: 0; padding-left: 4px; padding-right: 4px; }
   #STABLE_ID .gt_column_spanner_outer:first-child { padding-left: 0; }
   #STABLE_ID .gt_column_spanner_outer:last-child { padding-right: 0; }
   #STABLE_ID .gt_column_spanner { border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: bottom; padding-top: 2px; padding-bottom: 2px; overflow-x: hidden; display: inline-block; width: 100%; }
   #STABLE_ID .gt_spanner_row { border-bottom-style: hidden; }
   #STABLE_ID .gt_group_heading { padding-top: 0px; padding-bottom: 0px; padding-left: 5px; padding-right: 5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; text-transform: inherit; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: white; border-right-style: none; border-right-width: 1px; border-right-color: white; vertical-align: middle; text-align: left; }
   #STABLE_ID .gt_empty_group_heading { padding: 0.5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: middle; }
   #STABLE_ID .gt_from_md> :first-child { margin-top: 0; }
   #STABLE_ID .gt_from_md> :last-child { margin-bottom: 0; }
   #STABLE_ID .gt_row { padding-top: 2px; padding-bottom: 2px; padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style: none; border-top-width: 1px; border-top-color: #D3D3D3; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: middle; overflow-x: hidden; }
   #STABLE_ID .gt_stub { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: initial; text-transform: inherit; border-right-style: hidden; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; }
   #STABLE_ID .gt_stub_row_group { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top; }
   #STABLE_ID .gt_row_group_first td { border-top-width: 0.25px; }
   #STABLE_ID .gt_row_group_first th { border-top-width: 0.25px; }
   #STABLE_ID .gt_striped { background-color: rgba(128,128,128,0.05); }
   #STABLE_ID .gt_table_body { border-top-style: solid; border-top-width: 0px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; }
   #STABLE_ID .gt_sourcenotes { color: #333333; background-color: #FFFFFF; border-bottom-style: none; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_sourcenote { font-size: 10px; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; text-align: left; }
   #STABLE_ID .gt_left { text-align: left; }
   #STABLE_ID .gt_center { text-align: center; }
   #STABLE_ID .gt_right { text-align: right; font-variant-numeric: tabular-nums; }
   #STABLE_ID .gt_font_normal { font-weight: normal; }
   #STABLE_ID .gt_font_bold { font-weight: bold; }
   #STABLE_ID .gt_font_italic { font-style: italic; }
   #STABLE_ID .gt_super { font-size: 65%; }
   #STABLE_ID .gt_footnote_marks { font-size: 75%; vertical-align: 0.4em; position: initial; }
   #STABLE_ID .gt_asterisk { font-size: 100%; vertical-align: 0; }
   
  </style>
  <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
  <thead>
  
  <tr class="gt_col_headings gt_spanner_row">
    <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="2" colspan="1" scope="col" id=""></th>
    <th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="1" scope="col" id="y">
      <span class="gt_column_spanner">y</span>
    </th>
  </tr>
  <tr class="gt_col_headings">
    <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="0">(1)</th>
  </tr>
  </thead>
  <tbody class="gt_table_body">
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">coef</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">x1</th>
      <td class="gt_row gt_center">1.998*** <br> (0.112)</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">x2</th>
      <td class="gt_row gt_center">0.623*** <br> (0.110)</td>
    </tr>
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">fe</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">entity</th>
      <td class="gt_row gt_center">x</td>
    </tr>
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">stats</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">Observations</th>
      <td class="gt_row gt_center">100</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">R<sup>2</sup></th>
      <td class="gt_row gt_center">0.791</td>
    </tr>
  </tbody>
    <tfoot class="gt_sourcenotes">
    
    <tr>
      <td class="gt_sourcenote" colspan="2">Significance levels: * p &lt; 0.1, ** p &lt; 0.05, *** p &lt; 0.01. Format of coefficient cell: Coefficient   (Std. Error)</td>
    </tr>
  
  </tfoot>
  
  </table>
  
  </div>
          
  '''
# ---
# name: TestLinearmodelsSnapshots.test_panelols_latex
  '''
  \renewcommand\cellalign{t}
  \begin{threeparttable}
  \begingroup
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}X>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{1}{c}{y} \\
  \cmidrule(lr){2-2}
   & (1) \\
  \midrule
  \addlinespace[1ex]
  x1 & \makecell{1.998*** \\ (0.112)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  x2 & \makecell{0.623*** \\ (0.110)} \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  entity & x \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  Observations & 100 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  $R^2$ & 0.791 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \footnotesize 
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)\end{minipage}
  
  \end{threeparttable}
  '''
# ---
# name: TestLinearmodelsSnapshots.test_pooledols_html
  '''
  <div id="STABLE_ID" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
  <style>
  #STABLE_ID table {
            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
            -webkit-font-smoothing: antialiased;
            -moz-osx-font-smoothing: grayscale;
          }
  
  #STABLE_ID thead, tbody, tfoot, tr, td, th { border-style: none; }
   tr { background-color: transparent; }
  #STABLE_ID p { margin: 0; padding: 0; }
   #STABLE_ID .gt_table { display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: hidden; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; }
   #STABLE_ID .gt_caption { padding-top: 4px; padding-bottom: 4px; }
   #STABLE_ID .gt_title { color: #333333; font-size: 16px; font-weight: initial; padding-top: 6px; padding-bottom: 6px; padding-left: 5px; padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width: 0; }
   #STABLE_ID .gt_subtitle { color: #333333; font-size: 85%; font-weight: initial; padding-top: 5px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0; }
   #STABLE_ID .gt_heading { background-color: #FFFFFF; text-align: center; border-bottom-color: #FFFFFF; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_bottom_border { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #STABLE_ID .gt_col_headings { border-top-style: solid; border-top-width: 2px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_col_heading { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: bottom; padding-top: 2px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; overflow-x: hidden; }
   #STABLE_ID .gt_column_spanner_outer { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; padding-top: 0; padding-bottom: 0; padding-left: 4px; padding-right: 4px; }
   #STABLE_ID .gt_column_spanner_outer:first-child { padding-left: 0; }
   #STABLE_ID .gt_column_spanner_outer:last-child { padding-right: 0; }
   #STABLE_ID .gt_column_spanner { border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: bottom; padding-top: 2px; padding-bottom: 2px; overflow-x: hidden; display: inline-block; width: 100%; }
   #STABLE_ID .gt_spanner_row { border-bottom-style: hidden; }
   #STABLE_ID .gt_group_heading { padding-top: 0px; padding-bottom: 0px; padding-left: 5px; padding-right: 5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; text-transform: inherit; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: white; border-right-style: none; border-right-width: 1px; border-right-color: white; vertical-align: middle; text-align: left; }
   #STABLE_ID .gt_empty_group_heading { padding: 0.5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: middle; }
   #STABLE_ID .gt_from_md> :first-child { margin-top: 0; }
   #STABLE_ID .gt_from_md> :last-child { margin-bottom: 0; }
   #STABLE_ID .gt_row { padding-top: 2px; padding-bottom: 2px; padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style: none; border-top-width: 1px; border-top-color: #D3D3D3; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: middle; overflow-x: hidden; }
   #STABLE_ID .gt_stub { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: initial; text-transform: inherit; border-right-style: hidden; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; }
   #STABLE_ID .gt_stub_row_group { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top; }
   #STABLE_ID .gt_row_group_first td { border-top-width: 0.25px; }
   #STABLE_ID .gt_row_group_first th { border-top-width: 0.25px; }
   #STABLE_ID .gt_striped { background-color: rgba(128,128,128,0.05); }
   #STABLE_ID .gt_table_body { border-top-style: solid; border-top-width: 0px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; }
   #STABLE_ID .gt_sourcenotes { color: #333333; background-color: #FFFFFF; border-bottom-style: none; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_sourcenote { font-size: 10px; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; text-align: left; }
   #STABLE_ID .gt_left { text-align: left; }
   #STABLE_ID .gt_center { text-align: center; }
   #STABLE_ID .gt_right { text-align: right; font-variant-numeric: tabular-nums; }
   #STABLE_ID .gt_font_normal { font-weight: normal; }
   #STABLE_ID .gt_font_bold { font-weight: bold; }
   #STABLE_ID .gt_font_italic { font-style: italic; }
   #STABLE_ID .gt_super { font-size: 65%; }
   #STABLE_ID .gt_footnote_marks { font-size: 75%; vertical-align: 0.4em; position: initial; }
   #STABLE_ID .gt_asterisk { font-size: 100%; vertical-align: 0; }
   
  </style>
  <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
  <thead>
  
  <tr class="gt_col_headings gt_spanner_row">
    <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="2" colspan="1" scope="col" id=""></th>
    <th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="1" scope="col" id="y">
      <span class="gt_column_spanner">y</span>
    </th>
  </tr>
  <tr class="gt_col_headings">
    <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="0">(1)</th>
  </tr>
  </thead>
  <tbody class="gt_table_body">
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">coef</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">x1</th>
      <td class="gt_row gt_center">1.957*** <br> (0.128)</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">x2</th>
      <td class="gt_row gt_center">0.600*** <br> (0.144)</td>
    </tr>
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">stats</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">Observations</th>
      <td class="gt_row gt_center">100</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">R<sup>2</sup></th>
      <td class="gt_row gt_center">0.665</td>
    </tr>
  </tbody>
    <tfoot class="gt_sourcenotes">
    
    <tr>
      <td class="gt_sourcenote" colspan="2">Significance levels: * p &lt; 0.1, ** p &lt; 0.05, *** p &lt; 0.01. Format of coefficient cell: Coefficient   (Std. Error)</td>
    </tr>
  
  </tfoot>
  
  </table>
  
  </div>
          
  '''
# ---
# name: TestLinearmodelsSnapshots.test_pooledols_latex
  '''
  \renewcommand\cellalign{t}
  \begin{threeparttable}
  \begingroup
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}X>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{1}{c}{y} \\
  \cmidrule(lr){2-2}
   & (1) \\
  \midrule
  \addlinespace[1ex]
  x1 & \makecell{1.957*** \\ (0.128)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  x2 & \makecell{0.600*** \\ (0.144)} \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  Observations & 100 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  $R^2$ & 0.665 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \footnotesize 
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)\end{minipage}
  
  \end{threeparttable}
  '''
# ---
# name: TestStatsmodelsSnapshots.test_logit_html
  '''
  <div id="STABLE_ID" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
  <style>
  #STABLE_ID table {
            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
            -webkit-font-smoothing: antialiased;
            -moz-osx-font-smoothing: grayscale;
          }
  
  #STABLE_ID thead, tbody, tfoot, tr, td, th { border-style: none; }
   tr { background-color: transparent; }
  #STABLE_ID p { margin: 0; padding: 0; }
   #STABLE_ID .gt_table { display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: hidden; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; }
   #STABLE_ID .gt_caption { padding-top: 4px; padding-bottom: 4px; }
   #STABLE_ID .gt_title { color: #333333; font-size: 16px; font-weight: initial; padding-top: 6px; padding-bottom: 6px; padding-left: 5px; padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width: 0; }
   #STABLE_ID .gt_subtitle { color: #333333; font-size: 85%; font-weight: initial; padding-top: 5px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0; }
   #STABLE_ID .gt_heading { background-color: #FFFFFF; text-align: center; border-bottom-color: #FFFFFF; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_bottom_border { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #STABLE_ID .gt_col_headings { border-top-style: solid; border-top-width: 2px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_col_heading { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: bottom; padding-top: 2px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; overflow-x: hidden; }
   #STABLE_ID .gt_column_spanner_outer { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; padding-top: 0; padding-bottom: 0; padding-left: 4px; padding-right: 4px; }
   #STABLE_ID .gt_column_spanner_outer:first-child { padding-left: 0; }
   #STABLE_ID .gt_column_spanner_outer:last-child { padding-right: 0; }
   #STABLE_ID .gt_column_spanner { border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: bottom; padding-top: 2px; padding-bottom: 2px; overflow-x: hidden; display: inline-block; width: 100%; }
   #STABLE_ID .gt_spanner_row { border-bottom-style: hidden; }
   #STABLE_ID .gt_group_heading { padding-top: 0px; padding-bottom: 0px; padding-left: 5px; padding-right: 5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; text-transform: inherit; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: white; border-right-style: none; border-right-width: 1px; border-right-color: white; vertical-align: middle; text-align: left; }
   #STABLE_ID .gt_empty_group_heading { padding: 0.5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: middle; }
   #STABLE_ID .gt_from_md> :first-child { margin-top: 0; }
   #STABLE_ID .gt_from_md> :last-child { margin-bottom: 0; }
   #STABLE_ID .gt_row { padding-top: 2px; padding-bottom: 2px; padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style: none; border-top-width: 1px; border-top-color: #D3D3D3; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: middle; overflow-x: hidden; }
   #STABLE_ID .gt_stub { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: initial; text-transform: inherit; border-right-style: hidden; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; }
   #STABLE_ID .gt_stub_row_group { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top; }
   #STABLE_ID .gt_row_group_first td { border-top-width: 0.25px; }
   #STABLE_ID .gt_row_group_first th { border-top-width: 0.25px; }
   #STABLE_ID .gt_striped { background-color: rgba(128,128,128,0.05); }
   #STABLE_ID .gt_table_body { border-top-style: solid; border-top-width: 0px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; }
   #STABLE_ID .gt_sourcenotes { color: #333333; background-color: #FFFFFF; border-bottom-style: none; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_sourcenote { font-size: 10px; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; text-align: left; }
   #STABLE_ID .gt_left { text-align: left; }
   #STABLE_ID .gt_center { text-align: center; }
   #STABLE_ID .gt_right { text-align: right; font-variant-numeric: tabular-nums; }
   #STABLE_ID .gt_font_normal { font-weight: normal; }
   #STABLE_ID .gt_font_bold { font-weight: bold; }
   #STABLE_ID .gt_font_italic { font-style: italic; }
   #STABLE_ID .gt_super { font-size: 65%; }
   #STABLE_ID .gt_footnote_marks { font-size: 75%; vertical-align: 0.4em; position: initial; }
   #STABLE_ID .gt_asterisk { font-size: 100%; vertical-align: 0; }
   
  </style>
  <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
  <thead>
  
  <tr class="gt_col_headings gt_spanner_row">
    <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="2" colspan="1" scope="col" id=""></th>
    <th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="1" scope="col" id="y_binary">
      <span class="gt_column_spanner">y_binary</span>
    </th>
  </tr>
  <tr class="gt_col_headings">
    <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="0">(1)</th>
  </tr>
  </thead>
  <tbody class="gt_table_body">
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">coef</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">x</th>
      <td class="gt_row gt_center">1933.784 <br> (614063.360)</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">Intercept</th>
      <td class="gt_row gt_center">8.106 <br> (6267.036)</td>
    </tr>
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">stats</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">Observations</th>
      <td class="gt_row gt_center">100</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">R<sup>2</sup></th>
      <td class="gt_row gt_center">-</td>
    </tr>
  </tbody>
    <tfoot class="gt_sourcenotes">
    
    <tr>
      <td class="gt_sourcenote" colspan="2">Significance levels: * p &lt; 0.1, ** p &lt; 0.05, *** p &lt; 0.01. Format of coefficient cell: Coefficient   (Std. Error)</td>
    </tr>
  
  </tfoot>
  
  </table>
  
  </div>
          
  '''
# ---
# name: TestStatsmodelsSnapshots.test_logit_latex
  '''
  \renewcommand\cellalign{t}
  \begin{threeparttable}
  \begingroup
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}X>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{1}{c}{y_binary} \\
  \cmidrule(lr){2-2}
   & (1) \\
  \midrule
  \addlinespace[1ex]
  x & \makecell{1933.784 \\ (614063.360)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  Intercept & \makecell{8.106 \\ (6267.036)} \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  Observations & 100 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  $R^2$ & - \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \footnotesize 
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)\end{minipage}
  
  \end{threeparttable}
  '''
# ---
# name: TestStatsmodelsSnapshots.test_ols_html
  '''
  <div id="STABLE_ID" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
  <style>
  #STABLE_ID table {
            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
            -webkit-font-smoothing: antialiased;
            -moz-osx-font-smoothing: grayscale;
          }
  
  #STABLE_ID thead, tbody, tfoot, tr, td, th { border-style: none; }
   tr { background-color: transparent; }
  #STABLE_ID p { margin: 0; padding: 0; }
   #STABLE_ID .gt_table { display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: hidden; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; }
   #STABLE_ID .gt_caption { padding-top: 4px; padding-bottom: 4px; }
   #STABLE_ID .gt_title { color: #333333; font-size: 16px; font-weight: initial; padding-top: 6px; padding-bottom: 6px; padding-left: 5px; padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width: 0; }
   #STABLE_ID .gt_subtitle { color: #333333; font-size: 85%; font-weight: initial; padding-top: 5px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0; }
   #STABLE_ID .gt_heading { background-color: #FFFFFF; text-align: center; border-bottom-color: #FFFFFF; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_bottom_border { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #STABLE_ID .gt_col_headings { border-top-style: solid; border-top-width: 2px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_col_heading { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: bottom; padding-top: 2px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; overflow-x: hidden; }
   #STABLE_ID .gt_column_spanner_outer { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; padding-top: 0; padding-bottom: 0; padding-left: 4px; padding-right: 4px; }
   #STABLE_ID .gt_column_spanner_outer:first-child { padding-left: 0; }
   #STABLE_ID .gt_column_spanner_outer:last-child { padding-right: 0; }
   #STABLE_ID .gt_column_spanner { border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: bottom; padding-top: 2px; padding-bottom: 2px; overflow-x: hidden; display: inline-block; width: 100%; }
   #STABLE_ID .gt_spanner_row { border-bottom-style: hidden; }
   #STABLE_ID .gt_group_heading { padding-top: 0px; padding-bottom: 0px; padding-left: 5px; padding-right: 5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; text-transform: inherit; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: white; border-right-style: none; border-right-width: 1px; border-right-color: white; vertical-align: middle; text-align: left; }
   #STABLE_ID .gt_empty_group_heading { padding: 0.5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: middle; }
   #STABLE_ID .gt_from_md> :first-child { margin-top: 0; }
   #STABLE_ID .gt_from_md> :last-child { margin-bottom: 0; }
   #STABLE_ID .gt_row { padding-top: 2px; padding-bottom: 2px; padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style: none; border-top-width: 1px; border-top-color: #D3D3D3; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: middle; overflow-x: hidden; }
   #STABLE_ID .gt_stub { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: initial; text-transform: inherit; border-right-style: hidden; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; }
   #STABLE_ID .gt_stub_row_group { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top; }
   #STABLE_ID .gt_row_group_first td { border-top-width: 0.25px; }
   #STABLE_ID .gt_row_group_first th { border-top-width: 0.25px; }
   #STABLE_ID .gt_striped { background-color: rgba(128,128,128,0.05); }
   #STABLE_ID .gt_table_body { border-top-style: solid; border-top-width: 0px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; }
   #STABLE_ID .gt_sourcenotes { color: #333333; background-color: #FFFFFF; border-bottom-style: none; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_sourcenote { font-size: 10px; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; text-align: left; }
   #STABLE_ID .gt_left { text-align: left; }
   #STABLE_ID .gt_center { text-align: center; }
   #STABLE_ID .gt_right { text-align: right; font-variant-numeric: tabular-nums; }
   #STABLE_ID .gt_font_normal { font-weight: normal; }
   #STABLE_ID .gt_font_bold { font-weight: bold; }
   #STABLE_ID .gt_font_italic { font-style: italic; }
   #STABLE_ID .gt_super { font-size: 65%; }
   #STABLE_ID .gt_footnote_marks { font-size: 75%; vertical-align: 0.4em; position: initial; }
   #STABLE_ID .gt_asterisk { font-size: 100%; vertical-align: 0; }
   
  </style>
  <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
  <thead>
  
  <tr class="gt_col_headings gt_spanner_row">
    <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="2" colspan="1" scope="col" id=""></th>
    <th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="1" scope="col" id="y">
      <span class="gt_column_spanner">y</span>
    </th>
  </tr>
  <tr class="gt_col_headings">
    <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="0">(1)</th>
  </tr>
  </thead>
  <tbody class="gt_table_body">
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">coef</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">x</th>
      <td class="gt_row gt_center">2.100*** <br> (0.000)</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">Intercept</th>
      <td class="gt_row gt_center">0.000*** <br> (0.000)</td>
    </tr>
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">stats</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">Observations</th>
      <td class="gt_row gt_center">100</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">R<sup>2</sup></th>
      <td class="gt_row gt_center">1</td>
    </tr>
  </tbody>
    <tfoot class="gt_sourcenotes">
    
    <tr>
      <td class="gt_sourcenote" colspan="2">Significance levels: * p &lt; 0.1, ** p &lt; 0.05, *** p &lt; 0.01. Format of coefficient cell: Coefficient   (Std. Error)</td>
    </tr>
  
  </tfoot>
  
  </table>
  
  </div>
          
  '''
# ---
# name: TestStatsmodelsSnapshots.test_ols_latex
  '''
  \renewcommand\cellalign{t}
  \begin{threeparttable}
  \begingroup
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}X>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{1}{c}{y} \\
  \cmidrule(lr){2-2}
   & (1) \\
  \midrule
  \addlinespace[1ex]
  x & \makecell{2.100*** \\ (0.000)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  Intercept & \makecell{0.000*** \\ (0.000)} \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  Observations & 100 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  $R^2$ & 1 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \footnotesize 
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)\end{minipage}
  
  \end{threeparttable}
  '''
# ---
# name: TestStatsmodelsSnapshots.test_probit_html
  '''
  <div id="STABLE_ID" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
  <style>
  #STABLE_ID table {
            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
            -webkit-font-smoothing: antialiased;
            -moz-osx-font-smoothing: grayscale;
          }
  
  #STABLE_ID thead, tbody, tfoot, tr, td, th { border-style: none; }
   tr { background-color: transparent; }
  #STABLE_ID p { margin: 0; padding: 0; }
   #STABLE_ID .gt_table { display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: hidden; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; }
   #STABLE_ID .gt_caption { padding-top: 4px; padding-bottom: 4px; }
   #STABLE_ID .gt_title { color: #333333; font-size: 16px; font-weight: initial; padding-top: 6px; padding-bottom: 6px; padding-left: 5px; padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width: 0; }
   #STABLE_ID .gt_subtitle { color: #333333; font-size: 85%; font-weight: initial; padding-top: 5px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0; }
   #STABLE_ID .gt_heading { background-color: #FFFFFF; text-align: center; border-bottom-color: #FFFFFF; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_bottom_border { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #STABLE_ID .gt_col_headings { border-top-style: solid; border-top-width: 2px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_col_heading { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: bottom; padding-top: 2px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; overflow-x: hidden; }
   #STABLE_ID .gt_column_spanner_outer { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; padding-top: 0; padding-bottom: 0; padding-left: 4px; padding-right: 4px; }
   #STABLE_ID .gt_column_spanner_outer:first-child { padding-left: 0; }
   #STABLE_ID .gt_column_spanner_outer:last-child { padding-right: 0; }
   #STABLE_ID .gt_column_spanner { border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: bottom; padding-top: 2px; padding-bottom: 2px; overflow-x: hidden; display: inline-block; width: 100%; }
   #STABLE_ID .gt_spanner_row { border-bottom-style: hidden; }
   #STABLE_ID .gt_group_heading { padding-top: 0px; padding-bottom: 0px; padding-left: 5px; padding-right: 5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; text-transform: inherit; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: white; border-right-style: none; border-right-width: 1px; border-right-color: white; vertical-align: middle; text-align: left; }
   #STABLE_ID .gt_empty_group_heading { padding: 0.5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: middle; }
   #STABLE_ID .gt_from_md> :first-child { margin-top: 0; }
   #STABLE_ID .gt_from_md> :last-child { margin-bottom: 0; }
   #STABLE_ID .gt_row { padding-top: 2px; padding-bottom: 2px; padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style: none; border-top-width: 1px; border-top-color: #D3D3D3; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: middle; overflow-x: hidden; }
   #STABLE_ID .gt_stub { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: initial; text-transform: inherit; border-right-style: hidden; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; }
   #STABLE_ID .gt_stub_row_group { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top; }
   #STABLE_ID .gt_row_group_first td { border-top-width: 0.25px; }
   #STABLE_ID .gt_row_group_first th { border-top-width: 0.25px; }
   #STABLE_ID .gt_striped { background-color: rgba(128,128,128,0.05); }
   #STABLE_ID .gt_table_body { border-top-style: solid; border-top-width: 0px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; }
   #STABLE_ID .gt_sourcenotes { color: #333333; background-color: #FFFFFF; border-bottom-style: none; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_sourcenote { font-size: 10px; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; text-align: left; }
   #STABLE_ID .gt_left { text-align: left; }
   #STABLE_ID .gt_center { text-align: center; }
   #STABLE_ID .gt_right { text-align: right; font-variant-numeric: tabular-nums; }
   #STABLE_ID .gt_font_normal { font-weight: normal; }
   #STABLE_ID .gt_font_bold { font-weight: bold; }
   #STABLE_ID .gt_font_italic { font-style: italic; }
   #STABLE_ID .gt_super { font-size: 65%; }
   #STABLE_ID .gt_footnote_marks { font-size: 75%; vertical-align: 0.4em; position: initial; }
   #STABLE_ID .gt_asterisk { font-size: 100%; vertical-align: 0; }
   
  </style>
  <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
  <thead>
  
  <tr class="gt_col_headings gt_spanner_row">
    <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="2" colspan="1" scope="col" id=""></th>
    <th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="1" scope="col" id="y_binary">
      <span class="gt_column_spanner">y_binary</span>
    </th>
  </tr>
  <tr class="gt_col_headings">
    <th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="0">(1)</th>
  </tr>
  </thead>
  <tbody class="gt_table_body">
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">coef</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">x</th>
      <td class="gt_row gt_center">940.384 <br> (140417681969.216)</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">Intercept</th>
      <td class="gt_row gt_center">4.646 <br> (1895244764.470)</td>
    </tr>
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="2">stats</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">Observations</th>
      <td class="gt_row gt_center">100</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">R<sup>2</sup></th>
      <td class="gt_row gt_center">-</td>
    </tr>
  </tbody>
    <tfoot class="gt_sourcenotes">
    
    <tr>
      <td class="gt_sourcenote" colspan="2">Significance levels: * p &lt; 0.1, ** p &lt; 0.05, *** p &lt; 0.01. Format of coefficient cell: Coefficient   (Std. Error)</td>
    </tr>
  
  </tfoot>
  
  </table>
  
  </div>
          
  '''
# ---
# name: TestStatsmodelsSnapshots.test_probit_latex
  '''
  \renewcommand\cellalign{t}
  \begin{threeparttable}
  \begingroup
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}X>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{1}{c}{y_binary} \\
  \cmidrule(lr){2-2}
   & (1) \\
  \midrule
  \addlinespace[1ex]
  x & \makecell{940.384 \\ (140417681969.216)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  Intercept & \makecell{4.646 \\ (1895244764.470)} \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  Observations & 100 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  $R^2$ & - \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \footnotesize 
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  Significance levels: * p < 0.1, ** p < 0.05, *** p < 0.01. Format of coefficient cell: Coefficient   (Std. Error)\end{minipage}
  
  \end{threeparttable}
  '''
# ---
